[package]
name = "dirigera"
description = "Manage your IKEA Trådfri devices with Rust"
version = "0.2.0"
edition = "2021"
authors = ["Simon Sawert<simon@sawert.se>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bombsimon/dirigera-rs"
repository = "https://github.com/bombsimon/dirigera-rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Dependencies needed to run the binary to generate a token. Can be skipped if
# already obtained token or after token is obtained.
tokio = { version = "1.33", features = ["full"], optional = true}
pkce = { version = "0.1.1" }
url = { version = "2.4" }
reqwest = { version = "0.11.22", features = ["json"] }

url-builder={git="https://github.com/henriklundgren/url-builder.git", features=["macros"]}
#url-builder={path="../url-builder", features=["macros"]}
thiserror = "1.0.57"
async-trait = "0.1.77"

[dev-dependencies]
rand = "0.8.5"

[features]
default = []
example = ["dep:tokio"]

[[example]]
name = "dirigera"
required-features = ["example"]
